<resources>
    <string name="app_name">传送宝</string>
    <string name="app_about_name">传送宝(娱乐版)</string>
    <string name="app_date">2016/08/29</string>
    <string name="version">版本号:</string>
    <string name="update_time">更新时间:</string>
    <string name="msg_connection_loading">设备连接中...</string>
    <string name="click_to_connect">点击连接</string>
    <string name="no_disturb">免打扰</string>
    <string name="landscape">横屏</string>
    <string name="fm_out">FM输出</string>
    <string name="navigation">导航</string>
    <string name="music">音乐</string>
    <string name="network">网络</string>
    <string name="baidu">百度</string>
    <string name="search">搜索</string>
    <string name="internet">上网</string>
    <string name="myapp">我的应用</string>
    <string name="driving">行车</string>
    <string name="driving2">开车</string>
    <string name="map">地图</string>
    <string name="set">设置</string>
    <string name="link">投屏</string>
    <string name="close_link">断开</string>
    <string name="carmap">车托帮</string>
    <string name="kuwo">酷我音乐</string>
    <string name="application">应用</string>
    <string name="outside_notification_play_later">稍后观看</string>
    <string name="no_network_toast">当前无网络，请检查网络设置</string>
    <string name="search_mdeia_msg">(%1$d/%2$d)</string>
    <string name="search_mdeia_msg2">正在查找设备中的媒体文件...</string>
    <string name="search_cancel_msg">您可以点击手机返回按钮中止扫描</string>
    <string name="prompt">未找到您要的资源</string>
    <string name="main_activity_connect_text">点击连接</string>
    <string name="home_page2_local_videos">本地媒体</string>
    <string name="feedback_commit_success">提交成功，感谢您的意见和建议！</string>
    <string name="feedback_known">知道了</string>
    <string name="feedback_title">问题反馈</string>
    <string name="feedback_edit_text_hint">输入联系方式，QQ号，手机号，邮箱。</string>
    <string name="feedback_edit_text_content_hint">Pad问题，软件问题，内容问题，其他问题......</string>
    <string name="feedback_commit">提交</string>
    <string name="settings_link">连接设备</string>
    <string name="settings_light">亮度</string>
    <string name="settings_backgroud">壁纸</string>
    <string name="settings_quiet">Do Not Disturb</string>
    <string name="settings_assistant">通知助手</string>
    <string name="settings_landscape">强制横屏</string>
    <string name="settings_about">关于</string>
    <string name="settings_version">版本更新</string>
    <string name="settings_feedback">问题反馈</string>
    <string name="settings_help">帮助</string>
    <string name="viewpager_title_Auto">推荐应用</string>
    <string name="viewpager_title_Auto_dongle">推荐应用</string>
    <string name="viewpager_title_All">全部应用</string>
    <string name="viewpager_title_download">下载中</string>
    <string name="viewpager_title_installed">已安装</string>
    <string name="version_dialog">有新的版本1.2可用，是否安装？</string>
    <string name="version_dialog_ok">确定</string>
    <string name="version_dialog_cancel">取消</string>
    <string name="version_dialog_new">版本已是最新</string>
    <string name="version_dialog_fail">获取版本信息失败</string>
    <string name="failure">失败</string>
    <string name="no_more_data">暂无更多数据</string>
    <string name="webview_url_is_null">URL是空的</string>
    <string name="music_info_text">歌曲名：%1$s\n格式：%4$s\n大小：%5$s\n位置：%6$s</string>
    <string name="music_info_title">歌曲信息</string>
    <string name="unknow">未知</string>
    <string name="dialog_audio_list_title_text">添加到</string>
    <string name="odeum_loading">加载中...</string>
    <string name="audio_add_success">添加成功</string>
    <string name="sorry_no_the_video_data">抱歉，暂无此视频数据</string>
    <string name="no_recommendation_list_data">推荐列表数据暂无</string>
    <string name="no_related_series">暂无相关剧集</string>
    <string name="play_url_null">该视频暂时无法播放</string>
    <string name="sdcard_state_error">请挂载SD卡</string>
    <string name="has_play_to_last_video">已播至最后一集</string>
    <string name="has_play_to_first_video">已播至第一集</string>
    <string name="play_video">放映厅</string>
    <string name="play_music">音乐厅</string>
    <string name="photo_show">美图秀</string>
    <string name="new_file">新建播放列表</string>
    <string name="music_choose">选择</string>
    <string name="music_cancel">取消</string>
    <string name="music_add">添加</string>
    <string name="music_delete">删除</string>
    <string name="music_delete_ok">确定</string>
    <string name="music_delete_cancel">取消</string>
    <string name="music_delete_message">删除选中这%1$d项？</string>
    <string name="video_play_item">放映厅</string>
    <string name="music_play_item">音乐厅</string>
    <string name="image_browse_item">美图秀</string>
    <string name="refresh_page">媒体库刷新了</string>
    <string name="music_dialog_add">添加到</string>
    <string name="music_popwindow_time">按更新时间排序</string>
    <string name="music_popwindow_name">按文件名称排序</string>
    <string name="video_play_time">视频时长</string>
    <string name="notification_exit">退出</string>
    <string name="notification_home">主页</string>
    <string name="notification_running">TransPad运行中</string>
    <string name="notification_connect">正在TPQ设备上显示</string>
    <string name="home_download_dialog_message">立即下载%1$s？</string>
    <string name="dongle_home_app_title">推荐游戏</string>
    <string name="app_already_downlaod">应用已在下载列表中</string>
    <string name="download_has_been_suspended">下载已被暂停</string>
    <string name="download_immediately">是否立即下载%1$s？</string>
    <string name="music_dialog_delete_nothing">请选择要删除的项</string>
    <string name="download_install">安装</string>
    <string name="notification_accessibility_notice">开启此功能后，你可以在传送屏中即时收到手机中的通知。</string>
    <string name="settings_feedback_noContact">请输入联系方式</string>
    <string name="settings_feedback_noProblems">请输入问题描述</string>
    <string name="settings_feedback_invalidContact">请输入有效的联系方式</string>
    <string name="download_open">打开</string>
    <string name="settings_version_fail_noNetwork">当前无网络，请检查网络设置</string>
    <string name="settings_picture_unsupport">不支持该图片格式</string>
    <string name="device_battery_low">TransPad电池电量低！</string>
    <string name="director">导演：</string>
    <string name="limit">限号</string>
    <string name="actor">主演：</string>
    <string name="description">简介：</string>
    <string name="related_series">相关剧集</string>
    <string name="settings_feedback_tooLong">输入内容超过500字,请重新编辑</string>
    <string name="feedback_title_pad">Pad问题</string>
    <string name="feedback_title_soft">软件问题</string>
    <string name="feedback_title_content">内容问题</string>
    <string name="feedback_title_else">其他问题</string>
    <string name="feedback_problems_case">请选择问题种类</string>
    <string name="feedback_failed">信息反馈失败，请重试</string>
    <string name="setting_update_ok">确定</string>
    <string name="setting_update_install">安装</string>
    <string name="setting_update_force_fail">请重新下载</string>
    <string name="pull_to_refresh">下拉刷新</string>
    <string name="release_to_refresh">释放立即刷新</string>
    <string name="refreshing">正在刷新...</string>
    <string name="refresh_succeed">刷新成功</string>
    <string name="refresh_fail">刷新失败</string>
    <string name="pullup_to_load">上拉加载更多</string>
    <string name="release_to_load">释放立即加载</string>
    <string name="loading">正在加载...</string>
    <string name="load_succeed">加载成功</string>
    <string name="load_fail">加载失败</string>
    <string name="setting_update_force_cancel">取消</string>
    <string name="download_delete_message">确认删除吗？</string>
    <string name="no_scanning_file_message">无新增媒体文件</string>
    <string name="scanning_file_message">扫描到%1$d个新的媒体文件，是否添加到媒体库？</string>
    <string name="setting_update_downloading">正在下载更新，请稍后...</string>
    <string name="download_waiting">等待中...</string>
    <string name="open_wifidisplay_faild">请使用手机设置中的“多屏互动”选项连接设备</string>
    <string name="download_pause">暂停</string>
    <string name="download_error">出错%1$d</string>
    <string name="definition_normal">标清</string>
    <string name="definition_high">高清</string>
    <string name="definition_super">超清</string>
    <string name="finish">完成</string>
    <string name="selection_play">选集播放</string>
    <string name="play_immediately">立即播放</string>
    <string name="sohu_sdk_video_from">来源：搜狐视频</string>
    <string name="web_player_title">%1$s（%2$s）</string>
    <string name="hd_player">高清播放</string>
    <string name="audio_format_not_support">暂不支持播放该音频格式</string>
    <string name="drag_app_no_app_text_start">长按</string>
    <string name="drag_app_no_app_text_middle">我的应用</string>
    <string name="drag_app_no_app_text_end">中的图标，可以拖动到这里添加快捷方式</string>
    <string name="fullplayer_media_buffer_timeout">当前网络不稳定，请稍后观看</string>
    <string name="player_open_failed">播放器打开失败</string>
    <string name="player_full_file_not_exist">该文件不存在</string>
    <string name="coolui_connect_message">请依次点击 “设置” - “WLAN” - “WLAN 直连” ，选择需要连接的设备</string>
    <string name="update_description">有新的版本可用，是否更新？</string>
    <string name="download_detail_amount">已有%1$s人下载</string>
    <string name="download_detail_type">分类:</string>
    <string name="download_detail_size">大小:</string>
    <string name="download_detail_version">版本:</string>
    <string name="download_detail_download">下载</string>
    <string name="download_detail_install">安装</string>
    <string name="download_detail_more">更多</string>
    <string name="download_detail_less">收起</string>
    <string name="system_version_low">您的手机系统版本过低，无法使用本应用</string>
    <string name="dialog_prompt">提示</string>
    <string name="dialog_ok">确定</string>
    <string name="dialog_cancel">取消</string>
    <string name="settings_link_unlink">未连接</string>
    <string name="settings_link_link">已连接</string>
    <string name="htc_802t_connect_message">您的手机系统版本过低，请升级后再试</string>
    <string name="download_detail_toast">已开始下载，可在下载管理中查看。</string>
    <string name="download_detail_not_wifi">您当前处于非WiFi网络环境下，继续使用可能产生流量。</string>
    <string name="refresh_home_data_message">因网络原因无法展现内容，请点击刷新从新获取。</string>
    <string name="refresh">刷新</string>
    <string name="music_back">返回</string>
    <string name="music_sort">排序</string>
    <string name="all_app_recently_used">最近使用</string>
    <string name="all_app_other_app">其他应用</string>
    <!--<string name="msg_not_dualband">亲,你的手机不是双频的,投屏后会有卡顿现象哦~</string>-->
    <string name="msg_not_dualband"> 亲，如手机连接的是2.4G的无线局域网，投屏后可能会稍微卡顿，影响游戏效果。建议您手机联网时使用双频wifi 路由器的5G频段或断开局域网使用小宝。</string>
    <string name="button_know">知道了</string>
    <string name="msg_5_0">温馨提醒:\n您当前连接的Wi-Fi是2.4G,投屏后会稍显卡顿\n小宝建议您\n1、本次可以去忽略Wi-Fi,体验无网投屏的快感；\n2、尽快换成5G路由器，就可以每天畅快无忧地和小宝玩耍~</string>
    <string name="msg_not_5_0">温馨提醒:\n小宝在连接5GWi-Fi后投屏玩游戏最佳，如果您当前不是5GWi-Fi，小宝帮您出招\n1、本次可以去忽略Wi-Fi,体验无网投屏的快感；\n2、长远考虑，建议您更换5G路由器~</string>
    <string name="button_learn_ignore">去忽略</string>
    <string name="button_no_care">不管它</string>
    <string name="msg_dont_show_again">下次不再提示</string>
    <string name="msg_connect_tip">当前连接的是2.4G Wi-Fi</string>
    <string name="close">关闭</string>
    <string name="help_url">http://118.178.17.174/vi/player/help.html</string>
</resources>