<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@drawable/dialog_background"
        android:orientation="vertical"
        android:padding="10dip">

        <TextView
            android:id="@+id/tv_appname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_about_name"
            android:textColor="@color/white"
            android:textSize="22sp"/>

        <View
            android:layout_width="fill_parent"
            android:layout_height="0.5dip"
            android:layout_marginTop="10dip"
            android:background="@color/white"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/version"
                android:textColor="@color/white"
                android:textSize="17sp"/>

            <TextView
                android:id="@+id/tvVersion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:layout_marginLeft="5dip"
                android:textSize="17sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/update_time"
                android:textColor="@color/white"
                android:textSize="17sp"/>

            <TextView
                android:id="@+id/tvUpdateTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dip"
                android:text="@string/app_date"
                android:textColor="@color/white"
                android:textSize="17sp"/>
        </LinearLayout>

        <Button
            android:id="@+id/btn_close"
            android:layout_width="95dp"
            android:layout_height="27dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dip"
            android:background="@drawable/dialog_button_ok"
            android:text="@string/close"
            android:textColor="#ffffff"
            android:textSize="13sp"/>
    </LinearLayout>

</RelativeLayout>