<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
    >

    <LinearLayout
        android:layout_width="227dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@drawable/dialog_background"
        android:orientation="vertical">

        <TextView
            android:id="@+id/download_delete_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="27dp"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:layout_marginTop="45dp"
            android:background="@android:color/transparent"
            android:text="@string/msg_not_dualband"
            android:textColor="#ffffff"
            android:textSize="13sp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_ok"
                android:layout_width="95dp"
                android:layout_height="27dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="8dp"
                android:background="@drawable/dialog_button_ok"
                android:text="@string/button_know"
                android:textColor="#ffffff"
                android:textSize="13sp"/>

        </LinearLayout>

        <CheckBox
            android:id="@+id/ckb_show_again"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/msg_dont_show_again"
            android:textColor="#ffffff"
            android:textSize="13sp"/>
    </LinearLayout>

</RelativeLayout>