<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >

    <LinearLayout
        android:layout_width="227dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@drawable/dialog_background"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="25dp"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:background="@android:color/transparent"
            android:text="@string/refresh_home_data_message"
            android:textColor="#ffffff"
            android:textSize="13sp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">

            <Button
                android:id="@+id/refresh_ok"
                android:layout_width="95dp"
                android:layout_height="27dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="8dp"
                android:layout_marginRight="12dp"
                android:background="@drawable/dialog_button_ok"
                android:text="@string/refresh"
                android:textColor="#ffffff"
                android:textSize="13sp"/>

            <Button
                android:id="@+id/refresh_cancel"
                android:layout_width="95dp"
                android:layout_height="27dp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/dialog_button_cancel"
                android:text="@string/version_dialog_cancel"
                android:textColor="#ffffff"
                android:textSize="13sp"/>

        </LinearLayout>
    </LinearLayout>

</RelativeLayout>