<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
    >

    <LinearLayout
        android:layout_width="227dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@drawable/dialog_background"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="14dp"
            android:background="@android:color/transparent"
            android:text="@string/music_dialog_add"
            android:textColor="#ffffff"
            android:textSize="17sp"/>
        <ListView
            android:id="@+id/music_dialog_listView"
            android:layout_width="171dp"
            android:layout_height="59dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="11dp"
            android:listSelector="@android:color/transparent"
            android:divider="@drawable/dialog_separate_line"
            android:overScrollMode="never"
            android:scrollbars="none"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">

            <Button
                android:id="@+id/music_add_ok"
                android:layout_width="95dp"
                android:layout_height="27dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="8dp"
                android:layout_marginRight="12dp"
                android:background="@drawable/dialog_button_ok"
                android:text="@string/music_delete_ok"
                android:textColor="#ffffff"
                android:textSize="13sp"/>

            <Button
                android:id="@+id/music_add_cancel"
                android:layout_width="95dp"
                android:layout_height="27dp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/dialog_button_cancel"
                android:text="@string/music_delete_cancel"
                android:textColor="#ffffff"
                android:textSize="13sp"/>

        </LinearLayout>
    </LinearLayout>

</RelativeLayout>